--- a/EITA65/V35/2023-08-28.md
+++ b/EITA65/V35/2023-08-28.md
@@ -1,31 +1,37 @@
-### EITA65
+# EITA65
 
 ## Introduktionsföreläsning
 
-# Syfte med kursen
+### Syfte med kursen
 
 Ge dig en grundläggande uppfattning om vad digitalisering innebär så att du kan förklara det för andra.
 
-# Övning: Vad innebär digitalisering?
+### Övning: Vad innebär digitalisering?
 
 - Att skapa ett digitalt system för att hantera data som tidigare har hanterats "analogt".
 - Effektivisering.
 
-# Exempel: Digitalisering av P-biljetten LU
+### Exempel: Digitalisering av P-biljetten LU
 
 För några år sedan gjordes pappersparkeringsbiljetterna om till digitala biljetter på webben. Eftersom de inte längre var fysiska lappar kunde det lätt glömmas bort om det fungerade. Digitalisering kan ge sådana konsekvenser för användare som försvårar.
 
 I begreppet digitalisering ingår även hur allt förändras för användarna av de digitala systemen.
 
-# Digitalisering enligt Wikipedia
+### Digitalisering enligt Wikipedia
 
 Denna verksamhets- eller processdigitalisering innefattar ändrade arbetsmetoder, organisationsprocesser, affärsmodeller, samhällsstrukturer och kompetenskraft.
 
-# Digitalisering != Digitalisering
+### Digitalisering != Digitalisering
 
 Att skapa en digital blankett av en ursprungligen analog blankett är inte digitalisering.
 
-# Digitalisering = Digital transformation
+### Digitalisering = Digital transformation
 
 Är det inte bara ett "hypat" ord?
 Vi behöver ord för att prata om saker, och det är bra om orden betyder samma sak för olika personer.
+
+### Vad är digitalisering enligt andra källor?
+
+"Digitalisation is the use of digital technologies to change a business model and provide a new revenue and value-producing opportunities; it is the process of moving to a digital business" //Gartner
+
+"Digitalization means that business now uses technology to engage with people to precisely address their particual needs." //SAP News
