spelling errors fixed

--- a/EITA65/V35/2023-08-28.md
+++ b/EITA65/V35/2023-08-28.md
@@ -4,7 +4,7 @@
 
 ### Syfte med kursen
 
-Ge dig en grundläggande uppfattning om vad digitalisering innebär så att du kan förklara det för andra.
+Ge dig en grundläggande uppfattning om vad digitalisering innebär, så att du kan förklara det för andra.
 
 ### Övning: Vad innebär digitalisering?
 
@@ -32,6 +32,22 @@ Vi behöver ord för att prata om saker, och det är bra om orden betyder samma 
 
 ### Vad är digitalisering enligt andra källor?
 
-"Digitalisation is the use of digital technologies to change a business model and provide a new revenue and value-producing opportunities; it is the process of moving to a digital business" //Gartner
+"Digitalisation is the use of digital technologies to change a business model and provide new revenue and value-producing opportunities; it is the process of moving to a digital business" //Gartner
 
-"Digitalization means that business now uses technology to engage with people to precisely address their particual needs." //SAP News
+"Digitalization means that business now uses technology to engage with people to precisely address their particular needs." //SAP News
+
+### Digitalisering är...
+
+ett samarbete mellan teknik och behov.
+
+Fungerar inte om:
+
+- De som har behoven inte känner till att det finns lösningar.
+- De som kan tekniken inte förstår hur den bäst kan användas.
+
+### Exempel: Swish
+
+- Från kontant till Swish, vad har hänt?
+- På vilka nivåer?
+- Hur har det påverkat användare, samhälle, banker, IT-företag?
+- Vem har fått fördelar av det? Varför? Varför inte?
