--- a/EITA65/V35/2023-08-28.md
+++ b/EITA65/V35/2023-08-28.md
@@ -32,9 +32,9 @@ Vi behöver ord för att prata om saker, och det är bra om orden betyder samma 
 
 ### Vad är digitalisering enligt andra källor?
 
-"Digitalisation is the use of digital technologies to change a business model and provide new revenue and value-producing opportunities; it is the process of moving to a digital business" //Gartner
+"Digitalisation is the use of digital technologies to change a business model and provide new revenue and value-producing opportunities; it is the process of moving to a digital business." //Gartner
 
-"Digitalization means that business now uses technology to engage with people to precisely address their particular needs." //SAP News
+"Digitalization means that businesses now use technology to engage with people to precisely address their particular needs." //SAP News
 
 ### Digitalisering är...
 
@@ -47,7 +47,76 @@ Fungerar inte om:
 
 ### Exempel: Swish
 
-- Från kontant till Swish, vad har hänt?
+- Från kontanter till Swish, vad har hänt?
+  - Digitalt utanförskap
+  - Distans
+  - Exakta värden
+  - Snabbare
+  - Teknikstrul
+  - Säkrare
+  - Oftare tillgängligt
 - På vilka nivåer?
 - Hur har det påverkat användare, samhälle, banker, IT-företag?
 - Vem har fått fördelar av det? Varför? Varför inte?
+
+### Komplexa system
+
+- System idag blir snabbt allt större och allt mer komplexa.
+- Hårdvara och programvara. Realtid och självlärande.
+- Många olika roller, scenarier, människor, ...
+- System av system, integrationer, byte av system, underhåll, ...
+
+### Exempel: Volkswagen
+
+Förut:
+
+- Motor
+- Hjul
+- Ratt
+
+Nu även:
+
+- Styrsystem
+- Batteristyrning
+- Skärmar
+- Kameror
+- Entertainmentsystem
+- Laddsystem
+- Färddatainsamling
+
+- Laddstationer
+- Betalningsmodeller
+- Identitet/säkerhetsfunktioner
+- Servicesystem
+
+### Nya vs. gamla affärsmodeller
+
+- Digitaliseringens påverkar syns hos företagen
+- Fortune 500:
+  - Tidigare stabil och cementera
+  - Mycket mer rörlig nu
+- Gamla företag:
+  - Utveckla och kontrollera "hela stacken"
+- Nyare företag:
+  - Specialiserad domänskonskap gör att vi gör ett bättre jobb på en specifik marknadsdel
+- Liknelse:
+  - Nyare företag "skär ut" ett segment ur tårtan
+- Svårare att utveckla och kontroller ett system av system ju större det blir
+
+## Hur börjar vi i kursen?
+
+### Välkommen till vår start-up!
+
+- Drönarleveranser
+- Business-case?
+- Utvärdering
+- Simulering
+- Utvecklingsteam på plats
+
+### Drönarleveranser
+
+- Start-up:
+  - Vad är egentligen viktigt?
+  - Hur ser marknaden ut?
+  - Vilka tjänster är intressanta?
+  - Hur bör infrastrukturen för ett drönarsystem se ut?
