--- a/EITA65/V35/2023-08-28.md
+++ b/EITA65/V35/2023-08-28.md
@@ -120,3 +120,55 @@ Nu även:
   - Hur ser marknaden ut?
   - Vilka tjänster är intressanta?
   - Hur bör infrastrukturen för ett drönarsystem se ut?
+
+### Kunskaper från många domäner behövs
+
+- CS (Computer Science)
+- Designvetenskaper
+- EIT (Elektro- och informationsteknik)
+
+### Designvetenskap
+
+Människans samspel med tekniken, produkt-design, setstik och produktion, innovationsteknik och innovationsstyrning, distribution och förpackning
+
+### Övning: Interaktionsmodaliteter i VR-labbet
+
+- Läsvecka 7
+- Uppleva olika interaktioner, t.ex VR och AR
+- Träna på terminologi om användarupplevelse
+- Börja undersöka tekniken bakom
+
+### Elektro- och informationsteknik (EIT)
+
+- 4 avdelningar, ca 120 personer
+- Ca 75 kurser
+- Huvudområden:
+  - Elektromagnetism och nanoelektronik
+  - Integrerade elektroniksystem
+  - Kommunikationssystem
+  - Säkerhets- och nätverkssystem
+
+### Nytt och unikt på er utbildning
+
+Utgår från det skill-set ni behöver nha när ni är färdiga
+
+- Systemtänkande
+
+  - Hoppa in i abstraktionsnivår
+  - Kommunicera på olika sätt och i olika sammanhang
+
+- Ny kunskap, nya färdigheter, kombinera kunskap från flera olika domäner
+- Självgående!
+
+### Kursen
+
+- Teori
+
+  - Föreläsningar
+  - Reflektionsföreläsningar
+  - Seminarier
+  - Övningar
+
+- Praktik
+  - Självständigt arbete (enskilt & grupp)
+  - Utvecklingsprojekt
