--- a/EDAA45/V35/2023-08-28.md
+++ b/EDAA45/V35/2023-08-28.md
@@ -68,3 +68,39 @@ https://index.scala-lang.org
   - Laborationer: kombinera flera koncept till en helhet
 - Genom studier av kursens teori: skapa förståelse
 - Genom samarbete med dina kurskamrater: gå djupare!
+
+### Kursmoment - varför?
+
+- Föreläsningar: skapa översikt, ge struktur, förklara teori, svara på frågor, motivera varför.
+- Övningar: bearbeta teorin steg för steg, grundövningar för alla, extraövningar om du vill öva mer, fördjupningsövningar om du vill gå djupare; förberedelse inför laborationerna.
+- Laborationer: obligatoriska, sätta samman teorins delar i ett större program; lösningar redovisas för handledare; gk på alla för att få tenta.
+- Resurstider: få hjälp med övningar och laborationsförberedelser av handlerade, fråga vad du vill.
+- Samarbetsgrupper: grupplärande genom samarbete, hjälpa varandra.
+- Kontrollbeskrivning: obligatorisk, diagnostisk, kamraträttad; kan ge samarbetsbonuspoäng till valfria tentan.
+- Infuviduell projektuppgift: obligatorisk, du visar att du kan skapa ett större program självständigt; redovisas för handlerade.
+- Muntligt prov: obligatoriskt, ska klaras för godkänt på kursen; du visar att du har tillräcklig förståelse för kursens koncept för att klara nästa kurs.
+- Tentamen: valfri för överbetyg men alla uppmuntras att försöka; skriftlig, enda hjälpmedel: snabbreferensen på http://cs.lth.se/pgk/quickref
+
+### Förkunskaper
+
+- Förkunskaper != Förmåga
+- Varken kompetens eller personliga egenskaper är statiska
+- "Programmeringskompetens är inte en enda enkel förmåga utan en komplex sammansättning av flera olika förmågor som utvecklas genom hela livet
+- Ett innovativt utvecklarteam behöver många olika kompetenser för att vara framgångsrikt.
+
+### Samarbetsgrupper
+
+- Ni delas in i samarbetsgrupper om 3-6 personer baserat på förkunskapsenkäter, så att olika förkunskapsnivåer sammanförs
+- En av laborationerna (snake) i lp2 är en mer omfattande grupplabb och kommer att göras i din samarbetsgrupp
+- Kontrollbeskrivningen i halvtid kan ge samarbetsbonus (max 5p) som adderas till ordinarie tentans poäng (max 100p) med medlevärdet av gruppmedlemmarnas individuella kontrollskrivningspoäng. Bonus b för varje person i en grupp med n medlemmar med p poäng vardera på kontrollskrivningen
+
+### Varför studera i samarbetsgrupper?
+
+Huvudstyfte: Djupinriktat lärande!
+
+- Pedagogisk forsnking stödjer tesen att lärandet blir mer djupinriktat om det sker i utbyte med andra
+- Ett studiesammanhang med höga ambitioner och respektfull gemenska gör att vi når mycket längre
+- Varför ska du som redan kan mycket aktivt dela med dig av dina kunskaper?
+  - Förstå bättre själv genom att förklara för andra
+  - Träna din pedagogiska förmåga
+  - Förbered dig för ditt kommande yrkesliv som mjukvaruutvecklare
