--- a/EDAA45/V35/2023-08-28.md
+++ b/EDAA45/V35/2023-08-28.md
@@ -104,3 +104,61 @@ Huvudstyfte: Djupinriktat lärande!
   - Förstå bättre själv genom att förklara för andra
   - Träna din pedagogiska förmåga
   - Förbered dig för ditt kommande yrkesliv som mjukvaruutvecklare
+
+## Om programmering
+
+### Att skapa koden som styr världen
+
+I stort sett alla delar av samhället är beroende av programkod:
+
+- kommunikation
+- transport
+- byggsektorn
+- statsförvaltning
+- finanssektorn
+- media & underhållning
+- sjukvård
+- övervakning
+- integritet
+- upphovsrätt
+- miljö & energi
+- sociala relationer
+- utbildning
+- ...
+
+Hur blir ditt framtida yrkesliv som systemutvecklare?
+
+- Det är sedan lång tid en skriande brist på utvecklare och det blir bara värre...
+- Störst brist är det på kvinnliga utvecklare.
+- Global kompetensmarknad!
+
+### Utvekling av mjukvara i praktiken
+
+- Inte bara kodning: kravbeslut, releaseplanering, design, test, versionshantering, kontinuerlig integration, driftsättning, återkoppling från dagens användare, ekonomi & inverstering, gissa om morgondagens användare, ...
+- Teamwork: Inte ensamma hjältar utan autonoma team i decentraliserade organisationer med innovationsuppdrag
+- Snabbhet: Att koda innebär att hela tiden uppfinnaa nya byggstenar som ökar organisationesn förmåga att snabbt skapa värde med hjälp av mjukvara. Öppen källkod. skapa kraftfulla API:er.
+- Livslångt lärande: Lär nytt och dela med dig hela tiden. Exempel på pedagogisk utmaning: hjälp andra förstå och använda ditt API -> samarbetskultur
+
+### Hur fungerar en dator?
+
+Indata-enhet -> CPU <-> Minne med minnesceller -> Utdata-enhet
+
+Minnet innehåller endast **heltal** som representerar **data** och **instruktioner**
+
+### Vad innebär programmering?
+
+- Programmering innebär att ge instruktioner till en maskin
+- Ett programmeringsspråk används av människor för att skriva källkod som kan översättas av en kompilator till maskinspråk som i sin tur kan exekveras av en dator
+- Ada Lovelace publicerade det första programmet redan på 1800-talet
+
+### Vad är en kompilator?
+
+Källkod (för människor) -> Kompilator -> Maskinkod (för maskiner)
+
+Grace Hopper uppfann kompilatorn 1952!
+
+### Virtuell maskin (VM) == abstrakt hårdvara
+
+- En VM är en "dator" implementerad i mjukvara som kan tolka en abstrakt "maskinkod" som översätta under körning till den verkliga maskinens konkreta maskinkod.
+- Med en VM blir källkoden plattformsoberoende och fungerar på många olika maskiner.
+- Exempel JVM: Java Virtual Machine
