--- a/EDAA45/V35/2023-08-29.md
+++ b/EDAA45/V35/2023-08-29.md
@@ -88,3 +88,46 @@ http://cs.lth.se/verktyg
 - Scala och Java är s.k. statiskt typade språk, vilket innebär att kontroll av typinformation sker vid kompilering.
 
 - Scala-kompilatorn gör typhärledning
+
+### Grundtypernas omfång
+
+Grundtypen String lagras som en sekvens av 16-bitars tecken av typen Chat och kan vara av godycklig längd (tills minnet tar slut).
+
+### Uttryck
+
+- Ett uttryck består av en eller flera delar som efter evaluering ger ett resultat.
+- Delar i ett uttryck kan t.ex. vara: litteraler (42), operatorer (+), funktioner (sin), ...
+- Exempel:
+  - Ett enkelt uttryck: 42.0
+  - Sammansatta uttryck: 40 + 2 eller (20 + 1) / 4
+
+### Variabler
+
+- En variabel kan tilldelas värdet av ett enkelt eller sammansatt uttryck.
+- En variabel har ett variabelnamn, vars utformning följer språkets regler för s.k. identifierare.
+- En ny variabel införs i en variabeldeklaration och då den kan ges ett värde, initialiseras. Namnet användas som referens till värdet.
+- Exempel på variabeldeklarationer i Scala, notera nyckelordet val:
+  `val a = 0.5 * Pi`
+  `val length = 42 * sin(a)`
+  `val exclamationMarks = "!!!"`
+  `val greetingSwedish = "Hej på dej" + exclamationMarks`
+
+### Regler för identifierare
+
+- Enkel identifierare: t.ex. gurka2Tomat
+
+  - Börja med bokstav
+  - ...följt av bokstäver eller siffror
+  - Kan även innehålla understräck
+
+- Operator-identifierare, t.ex. +:
+  - Börjar med ett operatortecken, t.ex. + - \* / : ?
+  - Kan följas av andra operatortecken
+
+### Funktioner
+
+Definiera namn på uttryck
+
+- Med nyckelordet def kan man låta ett namn betyda samma sak som ett uttryck
+- Exempel: `def gurklängd = 42 + x`
+- Uttrycket till höger evalueras
