--- a/EITA55/V35/2023-08-31.md
+++ b/EITA55/V35/2023-08-31.md
@@ -142,3 +142,115 @@ Antalet amplitudnivåer beror på hur bra ljudet ska bli när vi återskapar det
 - x kbps
 - y bits
 - z kHz
+
+## Digital kommunikation
+
+### Koncept
+
+- I sändaren finns det en nätadapter som omvandlar bitarna till signaler som sedan skickas på länken.
+- Nätadaptern i mottagaren översätter signalerna till bitar igen.
+
+### Kommunikation, digital vs. analog
+
+- Digital transimission == digitala signaler
+
+  - Exempel: ljus - icke ljus
+
+- Analog transmission == analoga signaler
+  - Exempel: hög frekvens - låg frekvens
+
+### Översättning från bitar till siognaler
+
+- Det enklaste sättet att skicka bitar på en länk är genom att använda olika spänningsnivåer, så kallad linjekodning.
+- Exempel: Non-return zero (NRZ).
+
+### Manchester
+
+- Kombinerar NRZ och en klockpuls.
+- Inga problem med synkronisering.
+
+Notera att signalfrekvensen är dubbelt så hög jämför med NRZ.
+
+### Översättning från bitar till signaler
+
+- Ett annat sätt att skicka bitar över en länk är genom att använda så kallad modulering.
+
+- Bitarna representeras av en sinusvåg som är olika beroende på om det är enn etta eller nolla som skcikas.
+
+- Grundfrekvensen i sinusvågen utgör den såklallade
+
+### Exempel: Bithastighet för telefoni
+
+- Analog signal i frekvensbandet 0 - 4kHz.
+- Nyqvist-teoremet medför att samplingsfrekvensen blir 8kHz = 8000 sampel per sekund.
+- 8-bitars kodning av varje sampel.
+- Bithastigheten blir 64 kbit per sekund.
+
+### Signalkvalitet
+
+- Begrepp:
+  - Dämpning (attentuation)
+  - Distorsion (distortion)
+  - Brus (noise)
+  - Överhörning (cross-talk)
+  - Bitfelsfrekvens (bit error rate, BER)
+
+## Projektet
+
+### Mål för fördjupningsuppgiften
+
+- Tillämpa teknologi: Utforksa hur telekommunikationsteknologi kan bidra till att uppnå FN:s hållbara utvecklingsmål.
+- Funktionsanalys: Förstå hur den valda teknologin fungerar och dess tekniska begränsningar.
+- Helhetsbild: Analysera vad teknologin inte kan göra och identifiera kompletterande åtgärder som behövs för att uppnå målen.
+- Effektiv kommunikation: Lära sig att effektivt kommunicera foskningsresultat, båda skriftligt och muntligt, för olika målgrupper.
+- Studentengagemang. Skapa en engagerande och utbildande erfarenhet som hjälper studenter att koppla teknologi med samhällsfrågor.
+
+### Handlerarmöten
+
+- Grupphandledning: Varje grupp får en partner-grupp som handledare.
+- Ansvar: Det är gruppens ansvar att hålla möten och utbyta feedback.
+- Mötesfrekvens: Minst ett möte per vecka rekommenderas för optimal framgång.
+- Närvarokrav: Obligatorisk närvaro för att säkerställa kontinuerlig utveckling och kvalitet.
+- Dokumentation: Mötesanteckningar ska lämnas in via CANVAS efter varje möte.
+
+### Responsgrupper
+
+- Syfte: Att kontinuerligt följa och lära av andra gruppers arbete.
+- Erfaranhetsutbyte: Mötena fungerar som en plattform för att dela erfarenheter och feedback.
+
+### Rapporten
+
+- Inlämningsdatum:
+
+  - Utkast: 6/10 kl 12:00
+  - Slutlig version: 14/10 kl 12:00
+
+- Språk och format:
+
+  - Rapporten ska vara på svenska
+  - Max 4 sidor, IEEE-format
+
+- Orginalitetskontroll:
+
+  - PDF-filen kontrolleras automatiskt via Urkund
+  - Ej tillåtet att använda ChatGPT eller liknande
+
+- Peer Review:
+
+  - Varje rapport granskas av fyra kamratgranskare
+  - Inlämning av granskning: 9/10 kl 12:00 på CANVAS
+
+- Granskningsparenheter: Information om vem som granskar vem kommer att meddelas senare.
+
+### Studentkonferens
+
+- Datum och tid:
+
+  - 17 eller 18/10, kl. 09:00 - 16:00
+
+- Obligatoriskt deltagande:
+  - Alla grupper måste presentera sitt projekt
+
+### Kom ihåg!
+
+- Samtliga delmoment, inlämningsuppgifter och deadlines framgår av kursens CANVAS instans.
