Abstraktioner och funktioner

--- a/EDAA45/V37/2023-09-11.md
+++ b/EDAA45/V37/2023-09-11.md
@@ -94,3 +94,67 @@ namn(ledtext = "Name: ", efternamn = "Coder", förnamn = "Kim")
 - En parameterlös funktion deklarerad utan () ska anropas utan ()
 
 ### Hur ser det ut i minnet när funktioner anropas?
+
+#### Anropsstacken och objektheapen
+
+Minnet som innehåller ett programs data är uppdelat i två delar:
+
+- Anropsstacken:
+
+  - På anropsstacken läggs en aktiversingspost (stack frame, activation recoird) för varje anrop med plkats för parametrar och lokala variablers
+  - Aktiveringsposten raderas när returvärdet har levererats
+  - Stacken växer vid nästlade funktionsanrop, då en funktion i sin tur anropade en annan funktion
+
+- Objektheapen: I objektheapen sparas alla objekt som allokeras under körning. Heapen städas då och då av skräpsamlaren (garbage collector), och minne som inte används längre frigörs
+
+### Aktiveringspost
+
+Nästlade anrop ger växande anropsstack
+
+```scala
+
+def h(x: Int, y. Int) = { val z = x + y; println(z)}
+def g(a: Int, b: Int) = { val x = 1; h(x + 1, a + b)}
+def f() = { val n = 5; g(n, 2 * n)}
+f()
+
+```
+
+### En funktion är ett **värde**
+
+### Funktioner är äkta värden i Scala
+
+- En fumktion är ett **äkta värde**
+- Vi kan till exempel tilldela en variabel ett funktionsvärde
+- Ett funktionsvärde har en typ precis som alla värden:
+  `f: (Int, Int) => Int`
+- Ett funktionsvärde har till skillnad från en funktionsdeklaration inget namn. Det kallas därför en anonym funktion eller lambda
+
+### Funktionsvärden kan vara argument
+
+En funktion som har en annan funktion som parameter:
+
+```scala
+
+def tvåGånger(x: Int, f: Int => Int) = f(f(x))
+def öka(x: Int) = x + 1
+def minska(x: Int) = x - 1
+
+tvåGånger(42, öka) // 44
+tvåGånger(42, minska) // 40
+
+```
+
+### Applicera funktioner på element i samlingar med map
+
+```scala
+
+def öka(x: Int) = x + 1
+def minska(x: Int) = x - 1
+val xs = Vector(1, 2, 3)
+
+
+xs.map(öka) // Vector(2, 3, 4)
+xs.map(minska) // Vector(0, 1, 2)
+
+```
