--- a/EITA55/V37/2023-09-12.md
+++ b/EITA55/V37/2023-09-12.md
@@ -47,3 +47,13 @@ Ethernet-switchar ändrar normalt sätt inte någon header
 #### Fragmentering!
 
 Om det kommer data från ett övre skikt som inte får plats i ett enda datapaket sker så kallad fragmentering
+
+### Vägvalsalgoritmer
+
+- Vägväljarna använder en vägvalsalgoritm för att hitta en väg genom nätet
+- Syftet med vägvalsalgoritmen är att hitta den bästa möjliga vägen genom nätet för varje sändar-mottagarpar
+- Vägvalsalgoritmen måste också klara av förändringar i nätet
+
+### Nät-grafer
+
+- Vad är det=
