--- a/EITA55/V38/2023-09-21.md
+++ b/EITA55/V38/2023-09-21.md
@@ -47,3 +47,8 @@ I princip alla tidigare applikationer byggde på client/server-modellen
 - Din applikation fast på någon annnans dator
 - Enkelt och snabbt att skaffa fler VM när det behövs: _Skalbart_
 - Ansvarar själv för att allt är rätt kopplat och skalar som det ska
+
+### Cloud-native
+
+Dela upp stora applikationer i flera mindre tjänster
+
